[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/EnemyBat.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bat/fly.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bat/bite.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bat/hit and death.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 132, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 176, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 220, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 264, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 308, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 44, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 88, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 132, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 176, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 220, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 88, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 132, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 220, 0, 44, 92 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 264, 0, 44, 92 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": false,
"name": "Attack",
"speed": 7.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "Death",
"speed": 7.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "Fly",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 186.492

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 4.73778, 10.2446 )

[sub_resource type="CircleShape2D" id=21]
radius = 4.59071

[sub_resource type="CircleShape2D" id=22]
radius = 4.38939

[sub_resource type="Animation" id=23]
resource_name = "Hit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0251386, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 100, 100, 100, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EnemyBat" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 2147483681
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 3.63936, 1.1914 )
frames = SubResource( 18 )
animation = "Attack"
frame = 4
playing = true
offset = Vector2( -3.737, -2.307 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.79154, -0.921599 )

[node name="DetectArea" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0.141176 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectArea"]
position = Vector2( 0.552875, 0 )
shape = SubResource( 19 )

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2( 5.82704, 0 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -10.7755, 4.76403 )
rotation = 0.785398
shape = SubResource( 20 )

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
position = Vector2( -0.221329, 0.3045 )
shape = SubResource( 21 )

[node name="PassiveAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PassiveAttackArea"]
position = Vector2( -0.52747, 0.374777 )
shape = SubResource( 22 )

[node name="SpawnerArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnerArea"]
position = Vector2( -0.221329, 0.3045 )
shape = SubResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 23 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
